# scioly-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: commands.rs  lib.rs  main.rs  rank_query.rs  utils.rs
src/commands/: ai.rs  chat.rs  embeds.rs  google.rs  help.rs  mod.rs  moderation_tools.rs  pc.rs  pc_handler.rs  progress_checks.rs  rank_query.rs  register.rs  resources.rs  test_handler.rs
