[package]
name = "scioly-bot"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.40", features = ["macros", "rt-multi-thread"]}
poise = "0.6.1"
yaml-rust2 = "0.8.1"
jwalk = "0.8.1"
chrono = "0.4.38"
rayon = "1.10.0"
rust_search = "2.1.0"
rustls = "0.23.13"
serde = "^1.0"
serde_json = "^1.0"
google-drive3 = "*"
rust-fuzzy-search = "0.1.1"
strum = "0.26.3"
strum_macros ="0.26.4"
