[package]
name = "scioly-bot"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1.42", features = ["full"]}
poise = "0.6.1"
yaml-rust2 = "0.9.0"
jwalk = "0.8.1"
chrono = "0.4.39"
rayon = "1.10.0"
rust_search = "2.1.0"
rustls = "0.23.21"
serde = "^1.0"
serde_json = "^1.0"
google-drive3 = "*"
rust-fuzzy-search = "0.1.1"
strum = "0.26.3"
strum_macros = "0.26.4"
google-docs1 = "*"
rand = "0.9.0"
google-sheets4 = "*"
mistralrs = { path = "./mistral.rs/"}
# roux = "2.2.13"
